--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/scripts": "^0.13.0",
     "@nuxt/test-utils": "^3.20.1",
     "@nuxt/ui": "^4.1.0",
+    "@nuxtjs/supabase": "^2.0.1",
     "@supabase/supabase-js": "^2.84.0",
     "@tailwindcss/vite": "^4.1.17",
     "@unhead/vue": "^2.0.19",
